--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
   "author": "jbee",
   "license": "MIT",
   "scripts": {
-    "test": "mocha $(find ./ -name '*./test/**/*.test.js') --recursive -w"
+    "test": "mocha --require babel-register",
+    "start": "webpack-dev-server --open",
+    "build": "webpack"
   },
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-env": "^1.4.0",
+    "babel-register": "^6.24.1",
     "chai": "^3.5.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-plugin-import": "^2.2.0",
     "json-server": "^0.9.6",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "webpack": "^2.4.1",
+    "webpack-dev-server": "^2.4.4"
   },
   "dependencies": {
     "chai-http": "^3.0.0"
